# zk-vault

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  docker-compose.yml  lefthook.yml
.github/workflows/: ci.yml
crates/chain/: Cargo.toml  README.md
crates/chain/examples/: local_node.rs
crates/chain/src/: anchor_service.rs  blob_store.rs  blob_sync.rs  consensus.rs  deal_monitor.rs  lib.rs  mempool.rs  node.rs  rpc.rs  state.rs  storage.rs  types.rs
crates/chain/src/consensus/: driver.rs  engine.rs  mod.rs  vote_collector.rs
crates/chain/src/p2p/: message.rs  mod.rs  peer_manager.rs  transport.rs
crates/chain/tests/: integration.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/: Cargo.toml  README.md
crates/core/src/anchor/: ethereum.rs
crates/core/src/crypto/: anchor_keystore.rs  guardian.rs  hash.rs  kdf.rs  kem.rs  keys.rs  mnemonic.rs  mod.rs  sensitive.rs  shamir.rs  sign.rs  streaming.rs
crates/core/src/restore/: mod.rs
crates/core/src/sources/: google_drive.rs  mod.rs
crates/core/src/storage/: filecoin.rs  mod.rs  s3.rs
docs/: CLI.md  PRODUCT.md  cli.md
migrations/: 001_initial.sql
src/: error.rs  lib.rs  main.rs  pipeline.rs
src/anchor/: batch.rs  bitcoin.rs  mod.rs
src/crypto/: aead.rs  bundle.rs  hash.rs  kem.rs  keys.rs  mod.rs  sign.rs  streaming.rs
src/manifest/: mod.rs
src/merkle/: mod.rs  proof.rs  super_tree.rs  tree.rs
src/restore/: mod.rs
src/server/: auth.rs  middleware.rs  mod.rs  routes.rs  ws.rs
src/sources/: google_drive.rs  mod.rs
src/state/: mod.rs  models.rs  repository.rs
src/storage/: arweave.rs  filecoin.rs  ipfs.rs  mod.rs  storj.rs
