[package]
name = "zk-vault-chain"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
description = "Chain node for zk-vault: Malachite BFT consensus"

[dependencies]
zk-vault-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
