[package]
name = "zk-vault-chain"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "AGPL-3.0-or-later"
description = "Chain node for zk-vault: Malachite BFT consensus"

[dependencies]
zk-vault-core = { path = "../core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
blake3 = "1"

# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Persistence
rocksdb = "0.22"

# Utilities
base64 = "0.22"
hex = "0.4"
thiserror = "2"
tracing = "0.1"

# Async runtime & HTTP
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }

# Malachite BFT consensus
informalsystems-malachitebft-core-types = "0.5"

# P2P networking
libp2p = { version = "0.54", features = [
    "gossipsub",
    "request-response",
    "cbor",
    "noise",
    "tcp",
    "tokio",
    "mdns",
    "kad",
    "macros",
    "identify",
    "yamux",
] }
futures = "0.3"

[dev-dependencies]
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
