[package]
name = "zk-vault-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "AGPL-3.0-or-later"
description = "Core library for zk-vault: crypto, manifest, storage, merkle"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Post-quantum cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Classical cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

# Hashing & KDF
blake3 = "1"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"

# BIP-39 mnemonic
bip39 = "2"

# Memory safety
zeroize = { version = "1", features = ["derive"] }
subtle = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# S3-compatible storage (Mode A)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# HTTP client (for Filecoin/Storacha, data sources)
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
urlencoding = "2"
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-trait = "0.1"

# Blockchain anchoring
bitcoin = { version = "0.32", features = ["serde", "rand-std"] }
alloy = { version = "1", features = ["providers", "signers", "signer-local", "network", "consensus"] }

# Shamir Secret Sharing
sharks = "0.5"

# Utilities
rand = "0.8"
hex = "0.4"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
